pom sync